<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.4</version>
		<relativePath />
	</parent>
	<groupId>com.ikon.taskmanagement</groupId> <!-- lookup parent from repository -->
	<artifactId>taskmanagement</artifactId><!-- lookup parent from repository -->
	<version>1.0.0</version>
	<packaging>pom</packaging>

	<name>taskmanagement</name><!-- lookup parent from repository -->
	<url/>
	<licenses>
		<license />
	</licenses>
	<developers>
		<developer />
	</developers>
	<scm>
		<connection />
		<developerConnection />
		<tag />
		<url />
	</scm>
	<properties>
        <maven.compiler.release>21</maven.compiler.release>
        <java.version>21</java.version>
        <spring-cloud.version>2024.0.0</spring-cloud.version>
        <graalvm.version>24.1.1</graalvm.version>
        <avro.version>1.12.0</avro.version>
        <avro-serializer.version>7.8.0</avro-serializer.version>
        <ikon.sdk.version>1.0.0</ikon.sdk.version>
        <TaskManagement.version>1.0.0</TaskManagement.version>
    </properties>

    <repositories>
        <repository>
            <id>maven-central</id>
            <name>Maven Central Repository</name>
            <url>https://ikon-vpm.keross.com/nexus/repository/maven-central</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>ikon-nexus</id>
            <name>Ikon Repository</name>
            <url>https://ikon-vpm.keross.com/nexus/repository/maven-releases</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <!--<repository>
            <id>ikon-repository</id>
            <name>Ikon Repository</name>
            <url>https://ikon-vpm.keross.com/nexus/repository/maven-releases</url>
        </repository>-->
		<repository>
			<id>ikon-apps-lib-dist</id>
			<name>Ikon App Lib Repository</name>
			<url>https://ikon-vpm.keross.com/nexus/repository/ikon-apps-lib-dist/</url>
		</repository>
	</distributionManagement>

	<dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
        </dependencies>
    </dependencyManagement>
	<modules>
		<module>taskmanagement-client</module>
		<module>taskmanagement-server</module>
	</modules>
</project>
